# TestEditor

./: AFNS_FLUTTER_INTEGRATION_SUCCESS_REPORT.md  AFNS_GUI_APPLICATION_SUCCESS_REPORT.md  AI_CONTINUATION_PROMPT.md  APEXLANG_DESIGN.md  Cargo.toml  FINAL_AFNS_VICTORY_REPORT.md  FLUTTER_INTEGRATION_COMPLETE.md  MISSION_COMPLETED_REPORT.md  QUICK_SETUP_INSTRUCTIONS.md  README.md  collections.ll  comprehensive_report.txt  comprehensive_vision_compliance_report.md  efficiency_analysis.txt  flutter_direct_integration_plan.md  flutter_gui_complete.ll  flutter_integration_plan.md  gui_app.bc  gui_app.wat  gui_app_output.ll  hello_world.bc  hello_world.ll  hello_world.wat  primitives.ll  primitives.wat  special_types.ll  test_expression.afns  test_microbenchmark.afml  test_simple.afml  test_tokens.afml  vision.md  vision_requirements_compliance.txt
afns_flutter/afns_integration/dart_runtime/: afns_runtime.dart
docs/: FRACTIONS_PLAYBOOK.md  NATS_THEOREM_BOOK.md  SERDE_PLAYBOOK.md  SYSTEMS_PRIMER.md
examples/: afns_gui_demo  afns_gui_demo.c  working_flutter_gui_app.afns
examples/apex/: demo.apx
src/: main.rs
src/apexlang/: ast.rs  error.rs  interpreter.rs  lexer.rs  mod.rs  parser.rs  stdlib.rs  visualize.rs
src/ast/: mod.rs
src/codegen/: mod.rs
src/flutter_integration/: mod.rs
src/forge/: collections.rs  concurrency.rs  error.rs  ffi.rs  flutter.rs  io.rs  math.rs  memory.rs  mod.rs  os.rs  pointer.rs  special.rs  structs.rs  syscall.rs  types.rs
src/interpreter/: mod.rs
src/lexer/: mod.rs
src/parser/: mod.rs
src/type_system/: mod.rs
(+27 files in other folders)
