[package]
name = "afns"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "afns"
path = "src/main.rs"

[[bin]]
name = "afpm"
path = "src/bin/afpm.rs"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
anyhow = "1.0"
logos = "0.14"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.6", features = ["v4", "serde"] }
rust_decimal = "1.32"
num-bigint = "0.4"
num-rational = "0.4"
num-complex = "0.4"
num-integer = "0.1"
num-traits = "0.2"
once_cell = "1.18"
libc = "0.2"

[features]
flutter = []
forge = []